Sat Nov  1 00:14:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (rcs_internal_lockfile): Add comments about what we are
	trying to accomplish here (versus what RCS tries to accomplish).

	* rcs.c (RCS_parsercsfile_i): Clarify/expand comment about
	the purpose of having both this and RCS_reparsercsfile.
	(RCS_rewrite): Add comment about how this works.

	* admin.c (admin_fileproc): Add comment about call to
	RCS_fully_parse not RCS_reparsercsfile.
	* rcs.h: Comment on what delta_pos field of struct rcsnode is.

Fri Oct 31 16:38:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
			  and Abe Feldman

	* client.c (update_entries): If UTIME_EXPECTS_WRITABLE, if
	necessary change the file to be writable temporarily to set its
	modification time.

Thu Oct 30 17:42:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* admin.c (admin): Deal with new :: syntax for ranges.
	* rcs.c, rcs.h (RCS_delete_revs): New arg inclusive (set for the old
	behavior, clear to enable new code).
	* admin.c (admin_fileproc): Set it if :, clear it if ::.
	* sanity.sh (basica, head, branches, log): Add tests for this feature.

	* admin.c (admin_fileproc): Clean up the error message which
	happens if one of the RCS_* functions returns an error status; it
	is confusing to say that "rcs" failed now that this is implemented
	internally.
	* sanity.sh (admin): Update accordingly.

Wed Oct 29 07:07:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (admin-22-o24): New test, tests that admin -o
	correctly munged the deltatexts on a branch too.

	* rcs.c (RCS_delete_revs): If we are deleting an entire branch,
	delete the node in ->branches rather than setting the ->key to the
	bogus value NULL.
	* rcs.c (RCS_delete_revs): If "rev1" equals "branchpoint", then set
	"before" to the revision on the trunk that we branch from.
	* rcs.c (RCS_delete_revs): Don't set rev2 to revp->version (the
	code is missing an xstrdup, but it doesn't matter because rev2
	isn't used after this point).